--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 certifi==2021.10.8
 charset-normalizer==2.0.7
 idna==3.3
+mariadb==1.0.11
 mysql-connector-python==8.0.27
 numpy==1.21.3
 pandas==1.3.4
